# data-to-slides-with-dvc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yaml
data/: .gitignore
dvc/: .gitignore  download_data.py  dvc.yaml  slides.ipynb  train_model.py  transform_data.py
src/data_to_slides_with_dvc/: data_ingestion.py  main.py
tests/: test_data_ingestion.py  test_main.py
